--- a/templates/msgs/broadcast_scheduled_spa.haml
+++ b/templates/msgs/broadcast_scheduled_spa.haml
@@ -7,7 +7,10 @@
 
 -block action-buttons
 
--block page-container
+-block spa-title
+  {{title}}
+
+-block content
   .mt-4
     %table.list.lined.w-full
       %tbody
