Remove support for unused v1 omnibox format

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -255,8 +255,8 @@
         languages: base + 'language',
         environment: base + 'environment',
         activity: '/flow/activity/{{object.uuid}}/',
-        recipients: '/contact/omnibox?v=2&types=gc',
-        contacts: '/contact/omnibox?v=2&types=c',
+        recipients: '/contact/omnibox?types=gc',
+        contacts: '/contact/omnibox?types=c',
         contact: '/contact/read/',
 
         {% if can_simulate %}
