--- a/templates/utils/forms/omnibox_choice.haml
+++ b/templates/utils/forms/omnibox_choice.haml
@@ -2,5 +2,5 @@
   {% include "django/forms/widgets/attrs.html" %}  
   name="{{widget.name}}"
   {% if widget.value %}value="{{widget.value}}"{%endif%}
-  endpoint="/contact/omnibox/?v=2"
+  endpoint="/contact/omnibox/?"
 ></temba-omnibox>
