--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -119,6 +119,10 @@
     #grid {
       overflow: auto;
       z-index: 5;
+      border: 0px solid #e7e7e7;
+      margin-bottom: 2.5em;
+      margin-top: 0px;
+      height: 100%;
     }
 
     #shadow {
@@ -170,9 +174,22 @@
       margin-bottom: 0;
     }
 
+    #canvas::after {
+      background-color: #ffffff;
+    }
+
+    #canvas-container > div {
+      background-color: #ffffff;
+    }
+
+    .flow_node {
+      box-shadow: 0px 0px 4px 2px rgba(0,0,0,.05);
+      border: 1px solid transparent;
+    }
+
 -block extra-script
   {{ block.super }}
-
+  
   -for script in scripts
     %script(type="text/javascript" src="{{script}}")
 
