--- a/templates/msgs/msg_outbox_spa.haml
+++ b/templates/msgs/msg_outbox_spa.haml
@@ -13,7 +13,7 @@
             %span.glyph.icon-bullhorn.text-gray-500
           %td.value-recipient
             .pt-1.inline-block
-              -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.raw_urns
+              -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.urns
           %td.value-text.w-full
             {{ broadcast.get_text }}
           %td.created_on
