More agressive menu refreshing

--- a/templates/flows/flow_list_spa.haml
+++ b/templates/flows/flow_list_spa.haml
@@ -108,10 +108,7 @@
 
       function handleCreateLabelModalSubmitted(event) {
         refresh(function() { recheckIds(); }, true);
-        var menu = document.querySelector("temba-menu");
-        if (menu) {
-          menu.refresh();
-        }
+        refreshMenu();
       }
 
       function handleDownloadFlowResults(evt){
