--- a/templates/tickets/ticket_list_spa.haml
+++ b/templates/tickets/ticket_list_spa.haml
@@ -216,7 +216,7 @@
         empty.style.opacity = '1';
       }
 
-      // menu.refresh();
+      refreshMenu();
     }
 
     function removeTicket(uuid) {
@@ -265,7 +265,7 @@
       } else {
         tickets.refresh();
       }
-      menu.refresh();
+      refreshMenu();
     }
 
 
