--- a/templates/channels/channel_bulk_sender_options.haml
+++ b/templates/channels/channel_bulk_sender_options.haml
@@ -13,18 +13,16 @@
       number to receive messages, and use a bulk sender for your outgoing messages.
 
   -if not user_org.is_connected_to_vonage
-    %temba-modax.inline-block.mb-1(endpoint="{% url 'orgs.org_vonage_connect'%}" header='{{_("Connect Vonage")|escapejs}}')
-      .card.link
-        .relative
-          .text-base.absolute.text-gray-100.bg-icon.icon-vonage
-        .flex.flex-col.mx-20.relative
-          .title
-            -trans "Connect Vonage"
-
-          .mt-2
-            -blocktrans trimmed
-              A great way to connect if you are outside the United States or UK. Connect a Vonage Account to send
-              messages to over 200 countries worldwide.
+    .card.link{onclick:"goto(event, this)", href:"{% url 'orgs.org_vonage_connect' %}"}
+      .relative
+        .text-base.absolute.text-gray-100.bg-icon.icon-vonage
+      .flex.flex-col.mx-20.relative
+        .title
+          -trans "Connect Vonage"
+        .mt-2
+          -blocktrans trimmed
+            A great way to connect if you are outside the United States or UK. Connect a Vonage Account to send
+            messages to over 200 countries worldwide.
 
   .vonage-connected{class:'{% if not user_org.is_connected_to_vonage %}hide{%endif%}'}
     .card.link.posterize{href:"{% url 'channels.channel_create_bulk_sender' %}?connection=NX&channel={{request.GET.channel}}"}
