Fix dashboard not loading when content

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -19,7 +19,11 @@
       window.STATIC_URL = "{{STATIC_URL}}";
       function switchToNewInterface() {
         document.cookie = "nav=2; expires=Fri, 31 Dec 9999 23:59:59 GMT; path=/;";
-        document.location.reload();
+        if (document.location.pathname == "/") {
+          document.location.href = "{% url 'orgs.org_start' %}";
+        } else {
+          document.location.reload();
+        }
       }
 
       window.supportEmail = '{{brand.support_email}}';
@@ -268,7 +272,7 @@
         &nbsp;
 
 
-      %a#big-logo.logo.icon-logo{href:"{% if user.is_authenticated %}{% url 'msgs.msg_inbox' %}{% else %}/{% endif %}", title:"{{brand.name}}", class:"hover:no-underline"}
+      %a#big-logo.logo.icon-logo{href:"{% if user.is_authenticated %}{% url 'orgs.org_start' %}{% else %}/{% endif %}", title:"{{brand.name}}", class:"hover:no-underline"}
         .name
           {{brand.name}}
 
@@ -276,10 +280,11 @@
         -include 'includes/nav.html'
 
     -block interface-option
-      #preview.text-center.px-3.text-sm.py-1(style='background:rgba(0,0,0,.75);z-index:10000;position:fixed;bottom:0px;width:100%;color:#fff')
-        Preview the
-        %span.linked(onclick="switchToNewInterface()" style="color:#43b1ff")<
-          new interface
+      -if user.is_authenticated
+        #preview.text-center.px-3.text-sm.py-1(style='background:rgba(0,0,0,.75);z-index:10000;position:fixed;bottom:0px;width:100%;color:#fff')
+          Preview the
+          %span.linked(onclick="switchToNewInterface()" style="color:#43b1ff")<
+            new interface
 
     -if messages
       -block messages
