No longer intercept clicks in spa-content

--- a/templates/channels/types/twilio_messaging_service/claim.haml
+++ b/templates/channels/types/twilio_messaging_service/claim.haml
@@ -4,7 +4,7 @@
 -block pre-form
   -blocktrans trimmed
     You can add your Twilio Messaging SID as a channel. You can get your messaging Service SID
-    or create a new messaging service from <a href="https://www.twilio.com/user/account/messaging/services">Twilio Console</a>.
+    or create a new messaging service from <a target="_blank" href="https://www.twilio.com/user/account/messaging/services">Twilio Console</a>.
 
   .mt-2
     -blocktrans trimmed with brand.name as brand
