--- a/templates/orgs/user_two_factor_enable_spa.haml
+++ b/templates/orgs/user_two_factor_enable_spa.haml
@@ -10,7 +10,7 @@
       .pl-2.pr-6
         -blocktrans trimmed with ga_url="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2" authy_url="https://authy.com/"
           To enable two-factor authentication on your login, use a one-time password (OTP) application such as
-          <a href="{{ ga_url }}">Google Authenticator</a> or <a href="{{ authy_url }}">Authy</a> to scan the QR code
+          <a target="_blank" href="{{ ga_url }}">Google Authenticator</a> or <a target="_blank" href="{{ authy_url }}">Authy</a> to scan the QR code
           below.
       .px-2
         %canvas#qr
