Fix bad merge for goto function

--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -383,19 +383,21 @@
     }
 
     function goto(event, ele) {
-      var link = event.target.getAttribute('href');
-      
-      if (link) {
-        event.stopPropagation();
-        event.preventDefault();
-        if (event.metaKey) {
-          window.open(link, '_blank');
-        } else if (event.target.target) {
-          window.open(link, event.target.target);
-        } else {
-          document.location.href = link;
+      if (event.target != ele) {
+        if (event.target.href) {
+          event.stopPropagation();
+          event.preventDefault();
+
+          var link = event.target.href;
+          if (event.metaKey) {
+            window.open(link, '_blank');
+          } else if (event.target.target) {
+            window.open(link, event.target.target);
+          } else {
+            document.location.href = link;
+          }
+          return;  
         }
-        return;
       }
 
       if (!ele) {
