--- a/templates/smartmin/list.haml
+++ b/templates/smartmin/list.haml
@@ -34,7 +34,7 @@
                 -for field in fields
                   %td{ class:'value-{{field}} {% get_class field obj %}{% if field in link_fields %} clickable{% endif %}'}
                     - if field in link_fields
-                      <a {% if pjax %}data-pjax='{{ pjax }}'{% endif %} href="{% get_field_link field obj %}">{% get_value obj field %}</a>
+                      <div class="linked" onclick="goto(event, this)" {% if pjax %}data-pjax='{{ pjax }}'{% endif %} href="{% get_field_link field obj %}">{% get_value obj field %}</div>
                     - else
                       {% get_value obj field %}
 
